# bookokrat

./: Cargo.toml  README.md  readme.txt
src/: comments.rs  lib.rs  main.rs  main_app.rs  settings.rs  theme.rs
src/components/: mathml_renderer.rs
src/widget/: book_stat.rs  comments_viewer.rs  help_popup.rs  mod.rs  reading_history.rs  theme_selector.rs
src/widget/text_reader/: comments.rs  mod.rs  rendering.rs  types.rs
tests/: svg_snapshots.rs
